# SCM_OpenSource

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  railway.json  requirements.txt
docs/: API_AUTH.md  BENCHMARKS.md  BUG_LOG.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  HOSTED_DEMO.md  HUMAN_LIKE_USER_TRY.md  HUMAN_MEMORY_REVOLUTION_READINESS.md  HUMAN_MORE.md  INTEGRATIONS.md  LANGCHAIN_GUIDE.md  PHASE1_COMPLETE_DOCUMENTATION.md  PITCH.md  POSTGRES_PGVECTOR.md  PRODUCT_VISION.md  PROJECT_STATUS.md  PUBLISH.md  RESEARCH_DOC_AUDIT_2026-04-29.md  ROADMAP.md  SCM_BASELINE_COMPARISON.md  SCM_LONG_HORIZON.md  SCM_PAPER_BASELINE_2026-04-29.md  SCM_PRODUCTIZATION_STATUS_2026-05-01.md  SCM_REPRODUCIBILITY_PACK.md  SCM_RESEARCH_LOG.md  STATUS.md  TUTORIAL_10MIN_CHATBOT.md
examples/: 01_quickstart.py  02_wake_summary.py  03_with_ollama.py  README.md
research/: 03_SleepAI_Architecture.md  04_Comparative_Gap_Analysis.md  10_SCM_Human_Memory_Blueprint.md  11_SCM_HME_Phases_Document.md  SCM_Final_Paper.aux  SCM_Final_Paper.out  SCM_Final_Paper.tex  SCM_Final_Paper.toc  SCM_arXiv_Paper_v2.md  SleepAI_arXiv_Paper.md  cross_comparison_zhong_papers_2026-06-13.md  draft_reply_to_zhong_2026-06-13.md  priority_papers.md  what_from_zhong_helps_scm_2026-06-13.md
scm/: __init__.py  runtime.py
tests/: README.md  baseline_comparison.py  bench_vector_index.py  benchmark.py  benchmark_report.json  human_memory_benchmark.py  locomo_benchmark.py  locomo_hme_benchmark.py  locomo_mem0_baseline.py  locomo_plus_benchmark.py  locomo_plus_perturbations.py  locomo_results_summary.py  long_horizon_benchmark.py  phase2_metrics.py  phase3_metrics.py  phase4_metrics.py  phase6_guardrails.py  reproducibility_pack.py  test_ab_hierarchical.py  test_association_binder.py  test_attention_gate.py  test_auto_sleep_modes.py  test_baseline_comparison.py  test_brutal.py  test_brutal_e2e.py  test_brutal_lineage_api.py  test_brutal_real_llm.py  test_chat_integration.py  test_chat_router_e2e_flow.py  test_chat_router_memory_guardrail.py  test_circadian.py  (+46 more)
(+203 files in other folders)
