[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scm-memory"
version = "0.7.9"
description = "SCM: memory that works like yours — wake + sleep phases for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Saish Shinde", email = "saish.shinde15@gmail.com"}
]
maintainers = [
  {name = "Saish Shinde", email = "saish.shinde15@gmail.com"}
]
keywords = ["llm", "memory", "agent", "lifelong-learning", "consolidation", "sleep", "mcp", "rag", "lifelong-agent"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0",
  "networkx>=3.0",
  "numpy>=1.24.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
  "sqlalchemy>=2.0",
  "rich>=13.0",
  "ollama>=0.1.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
llm = ["openai>=1.0.0"]
postgres = ["psycopg2-binary>=2.9", "pgvector>=0.3.0"]
all = ["sentence-transformers>=2.2.0", "openai>=1.0.0", "ollama>=0.1.0", "psycopg2-binary>=2.9", "pgvector>=0.3.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "jsonschema>=4.0"]

[project.scripts]
scm = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/Saish15/sleepai"
Documentation = "https://github.com/Saish15/sleepai/blob/main/docs/DEPLOYMENT.md"
Paper = "https://github.com/Saish15/sleepai/blob/main/research/SCM_Final_Paper.pdf"
Changelog = "https://github.com/Saish15/sleepai/blob/main/CHANGELOG.md"
Issues = "https://github.com/Saish15/sleepai/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scm*", "src*"]

